@startuml
skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing true
left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

class User {
    name
    email
    phone
    password
    role
}

class Category {
    - id
    - designation
}

class Item {
    - condition
    - image
}

class Advertisement {
    - title
    - description
    - date
    - municipality
    - status
}

enum AdvertisementStatus {
    designation
}

note left of AdvertisementStatus
Active, Pending or Closed
endnote

' --- Associações ---
User "1" -- "0..*" Advertisement : owns
Advertisement "1" -- "1" Item : has >
Item "0..*" -- "1" Category: categorized >
Item "1" -- "1" AdvertisementStatus: has >
@enduml